--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 */*/__pycache__/*
 
 100DaysOfCode_TheCompletePythonProBootcamp/intermediate_plus/day39-FlightDeals-pt1/.env
+100DaysOfCode_TheCompletePythonProBootcamp/intermediate_plus/day46-Spotify/.env
+100DaysOfCode_TheCompletePythonProBootcamp/intermediate_plus/day46-Spotify/token.txt
