Udemy - add day 47

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
 */*/__pycache__/*
-
-100DaysOfCode_TheCompletePythonProBootcamp/intermediate_plus/day39-FlightDeals-pt1/.env
-100DaysOfCode_TheCompletePythonProBootcamp/intermediate_plus/day46-Spotify/.env
+*/*/*/.env
 100DaysOfCode_TheCompletePythonProBootcamp/intermediate_plus/day46-Spotify/token.txt
