--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 */*/__pycache__/*
 */*/*/.env
 100DaysOfCode_TheCompletePythonProBootcamp/intermediate_plus/day46-Spotify/token.txt
+100DaysOfCode_TheCompletePythonProBootcamp/advanced/*/__pycache__/*
